# python-hiccup

./: README.md  pyproject.toml  wip.py
.circleci/: config.yml
src/python_hiccup/html/: core.py
src/python_hiccup/render/: __init__.py  html_rendering.py
src/python_hiccup/transform/: __init__.py  core.py
test/: test_render_html.py
