[project]
name = "python-hiccup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mypy>=1.11.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["D", "COM812", "ISC001"]

line-length = 100

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["S101"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
